--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -304,3 +304,14 @@
   transform: translateY(4px);
   box-shadow: 0 0 0 rgba(0, 0, 0, 0.2);
 }
+
+/* Battle button style */
+.btn-battle {
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+.btn-battle:active {
+  transform: translateY(6px);
+  box-shadow: 0 0 0 #c73e3e, 0 2px 10px rgba(255, 75, 75, 0.4) !important;
+}
