--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -315,3 +315,14 @@
   transform: translateY(6px);
   box-shadow: 0 0 0 #c73e3e, 0 2px 10px rgba(255, 75, 75, 0.4) !important;
 }
+
+/* Game mode button style */
+.btn-mode {
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+.btn-mode:active {
+  transform: translateY(5px);
+  box-shadow: 0 0 0 var(--shadow-color) !important;
+}
